--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
