config proxy for production

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --fix"
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "gh-pages": "^6.3.0",
     "npm-run-all2": "^7.0.1",
     "pinia": "^2.1.7",
     "sass": "1.77.8",
